--- a/src/components/CardContainer.css
+++ b/src/components/CardContainer.css
@@ -6,15 +6,33 @@
 body {
     font-family: 'Montserrat', sans-serif;
   }
-  .container {
+  .container-cards {
     background-image: url('../assets/Images/1846936@2x.png'); 
     padding: 100 px;
     border-radius:20px;
+    padding-inline: 15px;
+    max-width: 1100px;
+    width: 100%;
+    margin-inline: auto;
   }
   .card-title {
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 10px;
+  }
+  .training {
+    font-size: 15px;
+    background-color: blue; /* Set the background color to blue */
+    color: white; /* Ensure text is readable with a white color */
+    padding: 5px 10px; /* Add some padding for visual separation */
+    display: inline-block; /* Make it behave like a button (optional) */
+    cursor: pointer; /* Add a pointer cursor on hover (optional) */
+    margin-bottom: 10px;
+  }
+  .lesson{
+    font-size: 10px;
+    color: #007bff;
+    margin-bottom: 7px;
   }
   .row{
     padding: 50px;
