--- a/src/components/ChatComponent.css
+++ b/src/components/ChatComponent.css
@@ -7,7 +7,14 @@
   background-color: #f5f5f5;
   padding: 20px;
   overflow-y: auto;
-  font-size: 25px;
+  font-size: 20px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.chatbot-container h1 {
+  font-size: 27px;
+  font-weight: bold;
+  padding: auto;
 }
 
 .message {
@@ -15,10 +22,18 @@
   margin-bottom: 10px;
   border-radius: 5px;
   background-color: #f2f2f2;
+  color: #000; /* Ensure the text color is black by default */
 }
 
-.user {
+.message.user {
   background-color: #eaf6ff;
+  color: #000;
+  font-size: 20px;
+}
+
+.message.bot {
+  color: #000;
+  font-size: 20px;
 }
 
 .input-container {
@@ -34,7 +49,7 @@ input[type="text"] {
 }
 
 button[type="submit"] {
-  background-color: #4caf50;
+  background-color: #3668d3;
   color: white;
   padding: 10px 15px;
   border: none;
