--- a/src/components/LessonPage.css
+++ b/src/components/LessonPage.css
@@ -1,77 +1,74 @@
 body {
-    font-family: 'Montserrat', sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  .lesson-page {
-    display: flex;
-  }
-  
-  .main-content {
-    flex: 1;
-    margin-right: 20px;
-  }
-  
-  .sidebar {
-    width: 400px;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #f5f5f5;
-    padding: 20px;
-  }
-  
-  /* Add any additional styling for the sidebar as needed */
-  .lesson-page {
-    padding: 20px;
-    background-color: #f8f8f8;
-  }
-  
-  .main-content {
-    max-width: 800px;
-    margin: 0 auto;
-    text-align: center;
-  }
-  
-  .button-group {
-    margin: 20px 0;
-  }
-  
-  .nav-button {
-    background-color: #0000ff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    margin: 0 10px;
-    cursor: pointer;
-    font-family: 'Montserrat', sans-serif;
-    transition: background-color 0.3s, color 0.3s;
-  }
-  
-  .nav-button:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-  }
-  
-  .nav-button:not(:disabled):hover {
-    background-color: #0056b3;
-  }
-  
-  .video-container {
-    margin: 20px 0;
-  }
-  
-  video {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .video-details {
-    text-align: left;
-    margin-top: 10px;
-  }
-  
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.lesson-page {
+  display: flex;
+  flex: 1;
+}
+
+.main-content {
+  flex: 1;
+  padding: 20px;
+  margin-right: 20px;
+
+  max-width: 800px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.sidebar {
+  width: 400px;
+  background-color: #f8f8f8;
+  padding: 20px;
+  position: relative;
+}
+
+.button-group {
+  margin: 20px 0;
+}
+
+.nav-button {
+  background-color: #0000ff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  margin: 0 10px;
+  cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.nav-button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.nav-button:not(:disabled):hover {
+  background-color: #0056b3;
+}
+
+.video-container {
+  margin: 20px 0;
+}
+
+video {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.video-details {
+  text-align: left;
+  margin-top: 10px;
+}
