--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,4 @@
 /* styles.css */
-
 .navbar {
   background-color: #f8f8f8; /* Cream color */
   padding: 1px;
@@ -8,8 +7,8 @@
   align-items: center;
   position: fixed;
   top: 0;
-  left: 0; /* Added to specify the left position */
-  right: 0; /* Added to specify the right position */
+  left: 0; /* Ensure the navbar spans the full width */
+  right: 0; /* Ensure the navbar spans the full width */
   z-index: 1000; /* Ensures navbar stays on top of other content */
   width: 100%;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
@@ -20,32 +19,6 @@
   padding: 20px;
   height: 80px; /* Adjust as needed */
 }
-
-.search-bar {
-  display: flex;
-  align-items: center; /* Align items vertically */
-}
-
-.search-bar input[type="text"] {
-  padding: 8px;
-  border: 1px solid #333; /* Changed border property */
-  border-radius: 5px;
-  margin-left: 10px;
-  font-family: 'Montserrat', sans-serif;
-  /* Reduced the margin */
-}
-
-
-.search-bar button {
-  padding: 8px 15px;
-  background-color: #0000ff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-family: 'Montserrat', sans-serif;
-}
-
 .nav-links {
   display: flex;
   margin-left: auto; /* Changed margin-right to margin-left */
@@ -53,14 +26,20 @@
 
 .nav-button {
   text-decoration: none;
-  color: #333;
+  color: #fff;
   padding: 12px 24px; /* Adjusted padding for better button size */
   border-radius: 5px;
   transition: background-color 0.3s, color 0.3s; /* Add smooth transition */
 }
-
+.nav-button Link {
+  text-decoration: none;
+  color: #fff;
+  padding: 12px 24px; /* Adjusted padding for better button size */
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s; /* Add smooth transition */
+}
 .nav-button:hover {
-  background-color: #0000ff; /* Blue color on hover */
+  background-color: #00ffff; /* Blue color on hover */
   color: #fff; /* Change text to white on hover */
 }
 
